<resources>
    <string name="app_name">MovieApp</string>
    <string name="my_name">Haris Ibrahimović</string>
    <string name="from">from</string>
    <string name="movieverse">Movieverse</string>
    <string name="todo">TODO</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_now_text">REGISTER NOW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="every">Every</string>
    <string name="show_and_more">show and more</string>
    <string name="movie_tv">movie, TV</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_no_caps">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_no_caps">Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="now_playing">Now playing</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="select_for_yourself">Select for yourself</string>
    <string name="watchlist">+ Watchlist</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="movie">Movie</string>
    <string name="verse">verse</string>
    <string name="select_genre">Select genre</string>
    <string name="story_line">Story line</string>
    <string name="similar_movies">Similar movies</string>
    <string name="star_cast">Star Cast</string>
    <string name="overview">Overview</string>
    <string name="stars">Stars</string>
    <string name="filmography">Filmography</string>
    <string name="tv_shows">TV Shows</string>
    <string name="born">Born:</string>
    <string name="add_rating">Add rating</string>
    <string name="rating">Rating</string>
    <string name="ratings">Ratings</string>
    <string name="addToFavorites">Add to favorites</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="addToWatchlist">Add to watchlist</string>
    <string name="watchlist_movies">Watchlist Movies</string>
    <string name="watchlist_tv_shows">Watchlist Tv Shows</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign in!</string>
    <string name="favorites_no_caps">Favorites</string>
    <string name="watchlist_no_caps">Watchlist</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="credits">Credits</string>
</resources>