<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="fragment"
            type="com.sirahi.movieapp.view.fragment.signup.StartLoginFragment" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".view.fragment.signup.StartLoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/todo"
                android:elevation="5dp"
                android:src="@drawable/movielogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/image_sign_activity"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/login_image_grad"
                android:contentDescription="@string/todo"
                android:src="@drawable/image_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:onClick="@{()-> fragment.loginNavigation()}"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/logo_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo_image" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/menu_dots"
                app:layout_constraintBottom_toBottomOf="@+id/signInText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/signInText"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerNowButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/register_button_design"
                android:fontFamily="@font/roboto_black"
                android:onClick="@{()-> fragment.registerNavigate()}"
                android:text="@string/register_now_text"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showandmore_text" />

            <TextView
                android:id="@+id/every_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/every"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_sign_activity" />

            <TextView
                android:id="@+id/movie_tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/movie_tv"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/every_text"
                app:layout_constraintStart_toStartOf="@+id/every_text"
                app:layout_constraintTop_toBottomOf="@+id/every_text" />

            <TextView
                android:id="@+id/showandmore_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/show_and_more"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/movie_tv_text"
                app:layout_constraintStart_toStartOf="@+id/movie_tv_text"
                app:layout_constraintTop_toBottomOf="@+id/movie_tv_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>