<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.sirahi.movieapp.presentation.RatingViewModel" />

        <variable
            name="fragment"
            type="com.sirahi.movieapp.view.fragment.menu.RatingFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkerGray"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/add_rating"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ratingCommentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20sp"
        android:fontFamily="@font/didact_gothic"
        android:hint="@string/write_your_comment_here"
        android:text="@={viewModel.ratingValue.comment}"
        android:textColor="#858585"
        android:textColorHint="#858585"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:setRating="@{viewModel.ratingValue.value}"
        app:onRatingChanged="@{viewModel}"
        android:numStars="5"
        android:progressBackgroundTint="#9C9B9B"
        android:progressTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_button_design"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/submitRatingButton"
        app:layout_constraintHorizontal_bias="0.5"
        android:onClick="@{()->fragment.closeWindow()}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingCommentEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitRatingButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_button_design"
        android:text="@string/submit"
        android:textColor="@color/white"

        android:onClick="@{()->viewModel.addRating()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/ratingCommentEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
